* Fixed pr comments for the gametests